--- a/sdb-sitecore-app/tsconfig.json
+++ b/sdb-sitecore-app/tsconfig.json
@@ -29,6 +29,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "strictFunctionTypes": false,
+    "strictPropertyInitialization": false,
     "module": "esnext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
