feat: add loading component and enhance ProductList with a table layout

--- a/sdb-sitecore-app/tsconfig.json
+++ b/sdb-sitecore-app/tsconfig.json
@@ -29,7 +29,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "strictFunctionTypes": false,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": false, // ใช้เฉพาะตอน poc ตอนทำจริงต้องเอาออก
     "module": "esnext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
