--- a/sdb-sitecore-app/package.json
+++ b/sdb-sitecore-app/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@sitecore-cloudsdk/core": "^0.5.4",
     "@sitecore-cloudsdk/events": "^0.5.4",
+    "@sitecore-cloudsdk/personalize": "^0.6.1",
     "@sitecore-content-sdk/nextjs": "^1.0.0",
     "mssql": "^12.2.0",
     "next": "^15.5.0",
