--- a/sdb-sitecore-app/package.json
+++ b/sdb-sitecore-app/package.json
@@ -25,6 +25,7 @@
     "@sitecore-cloudsdk/events": "^0.5.4",
     "@sitecore-cloudsdk/personalize": "^0.6.1",
     "@sitecore-content-sdk/nextjs": "^1.0.0",
+    "@sitecore-feaas/clientside": "^0.6.4",
     "mssql": "^12.2.0",
     "next": "^15.5.0",
     "next-intl": "^4.3.5",
